--- a/src/main/resources/fxml/css/main.css
+++ b/src/main/resources/fxml/css/main.css
@@ -16,23 +16,23 @@
 
 .text-area
 {
-    -fx-background-color: rgba(0, 0, 0, 0.1);
+    -fx-background-color: transparent;
     -fx-text-fill: white;
 }
 
 
 .text-area .scroll-bar:vertical
 {
-    -fx-background-color: rgba(0, 0, 0, 0.1);
+    -fx-background-color: transparent;
 }
 
 .text-area .scroll-bar:horizontal
 {
-    -fx-background-color: rgba(0, 0, 0, 0.1);
+    -fx-background-color: transparent;
 }
 
 .text-area, .text-area .viewport, .text-area .content {
-    -fx-background-color: rgba(0, 0, 0, 0.1);
+    -fx-background-color: transparent;
 }
 
 .text-area .scroll-bar > .increment-button,
