--- a/src/main/resources/fxml/pages/home.fxml
+++ b/src/main/resources/fxml/pages/home.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.text.TextFlow?>
@@ -11,13 +12,12 @@
 
 <AnchorPane prefHeight="382.0" prefWidth="618.0" stylesheets="@../css/main.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Text fill="WHITE" layoutX="14.0" layoutY="20.0" strokeType="OUTSIDE" strokeWidth="0.0" text="What's new?">
-         <font>
-            <Font name="System Bold" size="16.0" />
-         </font>
-      </Text>
-      <TextArea fx:id="changelog" editable="false" layoutY="24.0" prefHeight="358.0" prefWidth="276.0" />
-      <Button fx:id="launchButton" layoutX="290.0" layoutY="323.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="328.0" stylesheets="@../css/buttons.css" text="Launch" textFill="WHITE">
+      <Pane prefHeight="382.0" prefWidth="304.0" style="-fx-background-color: rgba(0, 0, 0, 0.2); -fx-background-radius: 6;">
+         <children>
+            <TextArea fx:id="changelog" editable="false" layoutX="12.0" layoutY="44.0" prefHeight="339.0" prefWidth="279.0" style="-fx-background-color: transparent;" wrapText="true" />
+         </children>
+      </Pane>
+      <Button fx:id="launchButton" layoutX="324.0" layoutY="324.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="294.0" stylesheets="@../css/buttons.css" text="Launch" textFill="WHITE">
          <font>
             <Font size="18.0" />
          </font>
@@ -26,12 +26,17 @@
             <String fx:value="launchButton" />
          </styleClass>
       </Button>
-      <TextFlow layoutX="290.0" layoutY="301.0" prefHeight="15.0" prefWidth="328.0" textAlignment="CENTER">
+      <TextFlow layoutX="330.0" layoutY="301.0" prefHeight="16.0" prefWidth="288.0" textAlignment="CENTER">
          <children>
             <Text fill="#dddddd" strokeType="OUTSIDE" strokeWidth="0.0" text="Latest version: " />
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text=" " />
             <Text fx:id="riseVersion" fill="#e1e1e1" strokeType="OUTSIDE" strokeWidth="0.0" />
          </children>
       </TextFlow>
+      <Text fill="WHITE" layoutX="14.0" layoutY="38.0" strokeType="OUTSIDE" strokeWidth="0.0" text="WHAT'S NEW?">
+         <font>
+            <Font name="System Bold" size="22.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
