--- a/src/main/resources/fxml/error.fxml
+++ b/src/main/resources/fxml/error.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="297.0" prefWidth="454.0" styleClass="background" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="297.0" prefWidth="454.0" style="-fx-background-color: linear-gradient(to top, #851e10, #b3391b); -fx-background-radius: 6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fx:id="riseLogo" fitHeight="74.0" fitWidth="77.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -41,7 +41,7 @@
          </font>
       </Text>
       <Label fx:id="errorMessage" alignment="TOP_CENTER" layoutX="111.0" layoutY="55.0" prefHeight="37.0" prefWidth="232.0" textAlignment="CENTER" textFill="#ffa9a9" wrapText="true" />
-      <TextArea fx:id="stacktrace" layoutX="18.0" layoutY="96.0" prefHeight="180.0" prefWidth="412.0" promptText="Error stacktrace" />
+      <TextArea fx:id="stacktrace" layoutX="18.0" layoutY="96.0" prefHeight="180.0" prefWidth="412.0" promptText="Error stacktrace" style="-fx-background-color: rgba(0, 0, 0, 0.1);" />
    </children>
    <stylesheets>
       <URL value="@css/main.css" />
