--- a/src/main/resources/fxml/started.fxml
+++ b/src/main/resources/fxml/started.fxml
@@ -39,7 +39,7 @@
       </Button>
       <TextArea fx:id="logs" editable="false" layoutX="20.0" layoutY="95.0" prefHeight="302.0" prefWidth="789.0" style="-fx-background-color: rgba(0, 0, 0, 0.2);" />
       <Text fill="#ffffffae" layoutX="351.0" layoutY="47.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Minecraft launch debug" />
-      <Button fx:id="closeExitButton" layoutX="101.0" layoutY="405.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="62.0" styleClass="launchButton" text="Close" textFill="WHITE" />
-      <Button fx:id="copyButton" layoutX="20.0" layoutY="405.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="62.0" styleClass="launchButton" text="Copy" textFill="WHITE" />
+      <Button fx:id="closeExitButton" layoutX="101.0" layoutY="405.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="62.0" styleClass="defaultButton" text="Close" textFill="WHITE" />
+      <Button fx:id="copyButton" layoutX="20.0" layoutY="405.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="62.0" styleClass="defaultButton" text="Copy" textFill="WHITE" />
    </children>
 </AnchorPane>
