--- a/src/main/resources/fxml/css/main.css
+++ b/src/main/resources/fxml/css/main.css
@@ -1,3 +1,9 @@
+@font-face {
+    src: url('../fonts/Roboto-Black.ttf');
+    src: url('../fonts/Roboto-BlackItalic.ttf');
+    src: url('../fonts/Roboto-Medium.ttf');
+}
+
 .text
 {
     -fx-text-fill: white;
@@ -5,8 +11,11 @@
 
 .background
 {
-    -fx-background-color: linear-gradient(to top left, #0f0c29, #302b63, #b745ef);
-    -fx-background-radius: 6;
+    -fx-background-radius: 70px;
+    -fx-background-image: url("../../background.jpg");
+    -fx-background-size: cover;
+    -fx-background-repeat: no-repeat;
+    -fx-background-position: center center;
 }
 
 .button .text
