--- a/src/main/resources/fxml/main.fxml
+++ b/src/main/resources/fxml/main.fxml
@@ -8,12 +8,14 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
+<?import javafx.scene.text.TextFlow?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="479.0" prefWidth="817.0" styleClass="background" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="479.0" prefWidth="817.0" style="-fx-background-color: transparent; -fx-background-radius: 12;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
+      <Rectangle fx:id="background" arcHeight="12.0" arcWidth="12.0" fill="#1f93ff00" height="479.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="817.0" />
       <Pane fx:id="topBar" prefHeight="65.0" prefWidth="817.0">
          <children>
             <Text fill="#ffffffae" layoutX="357.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Rise Loader by 1qxz" />
@@ -86,8 +88,14 @@
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
       </VBox>
-      <Text fx:id="version" fill="#ffffff99" layoutX="21.0" layoutY="453.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="130.0" />
+      <Text fx:id="version" fill="#ffffff99" layoutX="15.0" layoutY="450.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="150.0" />
       <Pane fx:id="pageContent" layoutX="180.0" layoutY="80.0" prefHeight="382.0" prefWidth="618.0" stylesheets="@css/main.css" />
+      <TextFlow layoutX="16.0" layoutY="422.0" prefHeight="21.0" prefWidth="150.0" textAlignment="CENTER">
+         <children>
+            <Text fill="#ffffff99" strokeType="OUTSIDE" strokeWidth="0.0" text="Release: " />
+            <Text fx:id="riseReleaseVersion" fill="#ffffff98" strokeType="OUTSIDE" strokeWidth="0.0" />
+         </children>
+      </TextFlow>
    </children>
    <stylesheets>
       <URL value="@css/buttons.css" />
