--- a/src/main/resources/fxml/runState.fxml
+++ b/src/main/resources/fxml/runState.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
@@ -15,7 +16,7 @@
       <URL value="@css/launching.css" />
    </stylesheets>
    <children>
-      <Pane layoutX="197.0" layoutY="134.0" prefHeight="183.0" prefWidth="424.0" style="-fx-background-color: rgba(0, 0, 0, 0.6); -fx-background-radius: 12;">
+      <Pane layoutX="197.0" layoutY="134.0" prefHeight="183.0" prefWidth="424.0" style="-fx-background-radius: 12; -fx-background-color: rgba(0, 0, 0, 0.7);">
          <children>
             <Button fx:id="cancelRun" layoutX="48.0" layoutY="124.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="328.0" stylesheets="@css/buttons.css" text="Cancel" textFill="WHITE">
                <font>
@@ -27,9 +28,15 @@
                </styleClass>
             </Button>
             <ProgressBar fx:id="mainProgress" layoutX="71.0" layoutY="32.0" prefHeight="32.0" prefWidth="282.0" />
-            <Label fx:id="status" alignment="CENTER" layoutX="71.0" layoutY="14.0" prefHeight="17.0" prefWidth="282.0" text="Initializing..." textFill="WHITE" />
+            <Label fx:id="status" alignment="CENTER" layoutX="71.0" layoutY="14.0" prefHeight="17.0" prefWidth="282.0" text="Initializing..." textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
             <ProgressBar fx:id="subProgress" layoutX="96.0" layoutY="76.0" prefHeight="17.0" prefWidth="232.0" />
          </children>
+         <effect>
+            <DropShadow height="120.0" radius="59.5" width="120.0" />
+         </effect>
       </Pane>
    </children>
 </Pane>
